--- a/src/Components/CreateClubScreen.css
+++ b/src/Components/CreateClubScreen.css
@@ -9,39 +9,32 @@
   
   .title {
     color: maroon;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
   }
+
+  .cartoon-images img {
+    width: 450px;
+    height: 200px;
+    margin: 0 10px;
+  }  
   
   .form-group {
     margin-bottom: 20px;
   }
   
-  .form-control {
-    padding: 8px;
-    width: 100%;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
+
   
   .invite-section {
     margin-bottom: 20px;
   }
   
-  .search-button,
-  .invite-button,
-  .create-button {
-    background-color: maroon;
-    color: white;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
+
+  .form-control:hover,
   .search-button:hover,
   .invite-button:hover,
-  .create-button:hover {
-    background-color: blue;
+  .create-button:hover,
+  .success-link:hover {
+    background-color: #ff3399; /* Lighter pink background color on hover */
   }
   
   .error-text {
@@ -73,11 +66,18 @@
     color: gray;
   }
   
+  .form-control,
+  .search-button,
+  .invite-button,
+  .create-button,
   .success-link {
-    display: block;
-    margin-top: 10px;
-    color: green;
-    text-decoration: none;
-    font-weight: bold;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-size: 16px;
+    background-color: #ff66b2; /* Pink background color */
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s;
   }
-  
