--- a/src/Components/CreateClubScreen.css
+++ b/src/Components/CreateClubScreen.css
@@ -34,7 +34,7 @@
   .invite-button:hover,
   .create-button:hover,
   .success-link:hover {
-    background-color: #ff3399; /* Lighter pink background color on hover */
+    background-color: #d0a161; /* Lighter pink background color on hover */
   }
   
   .error-text {
@@ -73,7 +73,7 @@
   .success-link {
     font-family: 'Comic Sans MS', cursive, sans-serif;
     font-size: 16px;
-    background-color: #ff66b2; /* Pink background color */
+    background-color: #a74815; /* Pink background color */
     color: white;
     padding: 8px 16px;
     border: none;
