--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
+  background-color: #f2dcb1;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-size: larger;
+  font-family: -apple-system, BlinkMacSystemFont, 'Lucida Sans Typewriter';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
