--- a/src/Components/ClubHomeScreen.css
+++ b/src/Components/ClubHomeScreen.css
@@ -30,3 +30,34 @@
   border: 1px solid black;
   background-color: cadetblue;
 }
+
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* Optional: If you want to center vertically too */
+}
+
+
+
+.styled-table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.styled-table th,
+.styled-table td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+.styled-table th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+.styled-table tbody tr:hover {
+  background-color: #f5f5f5;
+}
