--- a/src/Components/ClubHomeScreen.css
+++ b/src/Components/ClubHomeScreen.css
@@ -21,9 +21,14 @@
     margin-left: 10px; /* Add some spacing between tabs */
     border-radius: 5px;
   }
+
+  .tabs.selected {
+    background-color: brown; /* Change to your desired selected color */
+    color: white;
+  }
   
   .tabs:hover {
-    background-color: #e0e0e0;
+    background-color: brown;
   }
 
 .bold {
@@ -60,4 +65,18 @@
 
 .styled-table tbody tr:hover {
   background-color: #f5f5f5;
+}
+
+.button {
+  background-color: #9b5a32fb;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #9b5a329d;
 }
